--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -33,13 +33,11 @@ Mtu yoyote yule anaweza kutumia codespace chamsingi uwe tu na accout github
 
 # Jinsi ya kutengeneze codespace
 
-ilikutumia codespace itabidi uingie github na account yako kama huna sajili, ukisha ingia github utafanya hivi
-![github](https://i.ibb.co/qyryYBK/github-codespace-rep0edit1.jpg)
-
-Zingatia nimeanza na kutengeneza hadhina "repo" ambayo na taka kuiunganisha na codespace kama tayari unayo repo 
+ilikutumia codespace itabidi uingie github na account yako kama huna sajili, 
+zingatia na anza na kutengeneza hadhina "repo" ambayo nataka kuiunganisha na codespace kama tayari unayo hadhina **reposatory**
 ambayo unataka kuianganisha na codespace huna haja ya kutengeneza hadhina mpya lakini kama huna endelea kamaifuatavyo
 
-
+[github_repo](https://i.ibb.co/qyryYBK/github-codespace-rep0edit1.jpg)
 
 kwavile tayari ninayo hadhina tuanze mojakwamoja na kutumia codespace, fungua profile yako nauende kwenye kitufe cha codespace kama hivi
 
