--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -37,7 +37,7 @@ ilikutumia codespace itabidi uingie github na account yako kama huna sajili,
 zingatia na anza na kutengeneza hadhina "repo" ambayo nataka kuiunganisha na codespace kama tayari unayo hadhina **reposatory**
 ambayo unataka kuianganisha na codespace huna haja ya kutengeneza hadhina mpya lakini kama huna endelea kamaifuatavyo
 
-[github_repo](https://i.ibb.co/qyryYBK/github-codespace-rep0edit1.jpg)
+![github_repo](https://i.ibb.co/qyryYBK/github-codespace-rep0edit1.jpg)
 
 kwavile tayari ninayo hadhina tuanze mojakwamoja na kutumia codespace, fungua profile yako nauende kwenye kitufe cha codespace kama hivi
 
