--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -34,10 +34,12 @@ Mtu yoyote yule anaweza kutumia codespace chamsingi uwe tu na accout github
 # Jinsi ya kutengeneze codespace
 
 ilikutumia codespace itabidi uingie github na account yako kama huna sajili, 
-zingatia na anza na kutengeneza hadhina "repo" ambayo nataka kuiunganisha na codespace kama tayari unayo hadhina **reposatory**
+zingatia na anza na kutengeneza hadhina "repo" ambayo nataka kuiunganisha na codespace kama tayari unayo hadhina
 ambayo unataka kuianganisha na codespace huna haja ya kutengeneza hadhina mpya lakini kama huna endelea kamaifuatavyo
 
 ![github_repo](https://i.ibb.co/qBr5pV8/github-codespace-rep0edit2.jpg)
+
+![github_repo](https://i.ibb.co/GWCcBYp/github-codespace-rep1.jpg)
 
 kwavile tayari ninayo hadhina tuanze mojakwamoja na kutumia codespace, fungua profile yako nauende kwenye kitufe cha codespace kama hivi
 
