--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -41,6 +41,8 @@ ambayo unataka kuianganisha na codespace huna haja ya kutengeneza hadhina mpya l
 
 ![github_repo](https://i.ibb.co/GWCcBYp/github-codespace-rep1.jpg)
 
+![github_repo](https://i.ibb.co/BZkqyvf/github-codespace-rep2.jpg)
+
 kwavile tayari ninayo hadhina tuanze mojakwamoja na kutumia codespace, fungua profile yako nauende kwenye kitufe cha codespace kama hivi
 
 kuna template ambazo tungeweza kuanza nazo kutegemea na mazingira yako mimi sitachagua templete yoyote ile kwani templete ambayo nitaanza nayo
