--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -31,7 +31,7 @@ sambamba na mahitaji ya project yako pamoja na waendelezaji Kwa kutumia mafaili 
 
 Mtu yoyote yule anaweza kutumia codespace chamsingi uwe tu na accout github 
 
-# Jinsi ya kutengeneze codespace
+# Repository itakayo unganishwa codespace
 
 ilikutumia codespace itabidi uingie github na account yako kama huna sajili, 
 zingatia na anza na kutengeneza hadhina "repo" ambayo nataka kuiunganisha na codespace kama tayari unayo hadhina
@@ -43,12 +43,18 @@ ambayo unataka kuianganisha na codespace huna haja ya kutengeneza hadhina mpya l
 
 ![github_repo](https://i.ibb.co/BZkqyvf/github-codespace-rep2.jpg)
 
+# Jinsi ya kutengeneze codespace
+
 kwavile tayari ninayo hadhina tuanze mojakwamoja na kutumia codespace, fungua profile yako nauende kwenye kitufe cha codespace kama hivi
 
+![codespace](https://i.ibb.co/F3q01Yw/devduara0-codespace-rasa.jpg)
+
 kuna template ambazo tungeweza kuanza nazo kutegemea na mazingira yako mimi sitachagua templete yoyote ile kwani templete ambayo nitaanza nayo
-niile ambayo ni chagua lamsingi endapo huta chagua templete yote ile, yayewe inakuja ikiwa imewezesha na node, python, docker hii hasa inatufaa
+niile ambayo ni chagua lamsingi endapo huta chagua templete yote ile, ye nyewe inakuja ikiwa imewezesha na node, python, docker nk hii hasa inatufaa
 kwenye mazingira ya maktaba hii ambapo tunahitaji kutumia docker zaidi. kumbuka unaweza ukatengeneza templete yako na ukashare na
 wengine kwenye soko la github 
+
+![codespace](https://i.ibb.co/TWbDZcr/devduara0-Codespaces-newenv.jpg)
 
 >>zingatia kwenye akauti ya bure nje ya boksi unapata masa stini kwa mwezi ambayo ni bure
 na machine unaweza kuchagua ya 4 au 8 mpaka na nachapisha makala haya
