--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -31,7 +31,7 @@ sambamba na mahitaji ya project yako pamoja na waendelezaji Kwa kutumia mafaili 
 
 Mtu yoyote yule anaweza kutumia codespace chamsingi uwe tu na accout github 
 
-# Repository itakayo unganishwa codespace
+## Repository itakayo unganishwa codespace
 
 ilikutumia codespace itabidi uingie github na account yako kama huna sajili, 
 zingatia na anza na kutengeneza hadhina "repo" ambayo nataka kuiunganisha na codespace kama tayari unayo hadhina
@@ -43,7 +43,7 @@ ambayo unataka kuianganisha na codespace huna haja ya kutengeneza hadhina mpya l
 
 ![github_repo](https://i.ibb.co/BZkqyvf/github-codespace-rep2.jpg)
 
-# Jinsi ya kutengeneze codespace
+## Jinsi ya kutengeneze codespace
 
 kwavile tayari ninayo hadhina tuanze mojakwamoja na kutumia codespace, fungua profile yako nauende kwenye kitufe cha codespace kama hivi
 
