--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -56,6 +56,12 @@ wengine kwenye soko la github
 
 ![codespace](https://i.ibb.co/TWbDZcr/devduara0-Codespaces-newenv.jpg)
 
->>zingatia kwenye akauti ya bure nje ya boksi unapata masa stini kwa mwezi ambayo ni bure
-na machine unaweza kuchagua ya 4 au 8 mpaka na nachapisha makala haya
+Kwenye **repository** hakikisha umeweka hathina yako, kama unafanya kazi na tawi tofauti na **main**
+lionyesheshe hapo kwenye **brach**.
+
+Kwenye akauti ya bure nje ya boksi unapata masa stini kwa mwezi ambayo ni bure
+na machine unaweza kuchagua ya 2 au 4 CPU mpaka na nachapisha makala haya
+
+![codespace](https://i.ibb.co/CKBS0L9/Create-new-codespace.jpg)
+
 
