--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -65,3 +65,9 @@ na machine unaweza kuchagua ya 2 au 4 CPU mpaka na nachapisha makala haya
 ![codespace](https://i.ibb.co/CKBS0L9/Create-new-codespace.jpg)
 
 
+mara baada ya utekelezwaji wa uazishwaji wa cointainer lako la docker vscode itafunguka kwenye tuvuti yako ikiwa tayari 
+imeshaunganishwa na code zako pamoja na termina ambayo imenganishwa na cointainer lako codespace ! usiogope github ni bithaa ya microsoft 
+na hivyo ndivyo ilivyo kwa vs code.
+
+![codespace](https://i.ibb.co/0FtL4wF/devduara0-codespace-vscode.jpg)
+
