--- a/content/technology/github/post.mdx
+++ b/content/technology/github/post.mdx
@@ -69,5 +69,7 @@ mara baada ya utekelezwaji wa uazishwaji wa cointainer lako la docker vscode ita
 imeshaunganishwa na code zako pamoja na termina ambayo imenganishwa na cointainer lako codespace ! usiogope github ni bithaa ya microsoft 
 na hivyo ndivyo ilivyo kwa vs code.
 
+![codespace](https://i.ibb.co/2gQ5dkQ/codespace-vscode.jpg)
+
 ![codespace](https://i.ibb.co/0FtL4wF/devduara0-codespace-vscode.jpg)
 
