--- a/content/technology/4-things-every-programmer-should-know/post.mdx
+++ b/content/technology/4-things-every-programmer-should-know/post.mdx
@@ -126,7 +126,12 @@ Nibure kwajili ya sites za **hobby** na ambazo hazipo **kibiyashara**. Una weza 
 
 Kabla yakuandika code nilazima tuwe na yaliyomo ambayo tunataka kuonyesha kwenye webapp yetu hapa ndipo **contentful**  inapo ingia. 
 
-nenda moja kwa moja hadi contentful ingia na account yako mimi natumia account ya github kuingia  
+nenda moja kwa moja hadi contentful ingia na account yako mimi natumia account ya github kuingia 
+test test test
+
+![img](https://i.ibb.co/m4nY254/git-new-repo.jpg)
+
+test test test
 
 ![contentful logi](https://i.ibb.co/ZdBx9GM/Screenshot-2021-10-01-134251.jpg) 
 
