--- a/content/technology/4-things-every-programmer-should-know/post.mdx
+++ b/content/technology/4-things-every-programmer-should-know/post.mdx
@@ -129,6 +129,10 @@ Kabla yakuandika code nilazima tuwe na yaliyomo ambayo tunataka kuonyesha kwenye
 nenda moja kwa moja hadi contentful ingia na account yako mimi natumia account ya github kuingia 
 test test test
 
+![img](https://i.ibb.co/cQ7p0c5/github-create-new-repo.jpg)
+
+test test test
+
 ![img](https://i.ibb.co/m4nY254/git-new-repo.jpg)
 
 test test test
