--- a/content/technology/4-things-every-programmer-should-know/post.mdx
+++ b/content/technology/4-things-every-programmer-should-know/post.mdx
@@ -137,6 +137,12 @@ test test test
 
 test test test
 
+
+test test test
+
+
+![img](https://i.ibb.co/Pt92z6Y/github-create-newrepo.jpg)
+
 ![contentful logi](https://i.ibb.co/ZdBx9GM/Screenshot-2021-10-01-134251.jpg) 
 
 alafu ukishaingia utafanya yafutayo 
