--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -1,6 +1,6 @@
 ---
 title: React sehemu ya kwanza DOM na vipengele vya react, nyenzo mawinguni Sandbox, Versal na Github
-image: ./images/codespacejpg.jpg
+image: ./images/React_Dom_cover.jpg
 # imageAttribution: none needed for this post
 date: 2023-11-06
 category: Javascript
