--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -1,5 +1,5 @@
 ---
-title: React sehemu ya kwanza DOM na vipengele vya react, nyenzo mawinguni Sandbox, Versal na Github
+title:Jinsi ya kusambaza na kuendesha application ya React mawinguni kwa kutumia Versal na Github
 image: ./images/react_dom_cover.png
 # imageAttribution: none needed for this post
 date: 2023-11-06
