--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -9,5 +9,56 @@ topPick: false
 popular: true
 ---
 
-## This post right here!
+kasi ya ukuwaji wa technology imeleta mapinduzi ya hali ya juu ya jinsi ambavyo tuna
+sambaza na kuendesha application, Katika hali ya kawaida waendelezaji hutengeza application kwa kutumia 
+computer zao na huhitaji kuhifadhi hizo application kwenye server flani ili watumiaji kwenye mtandao wa internet waweza kuifikia.
 
+Application zina sehemu mbili upande-wambele **"frontend"** na upande-wanyuma **"backend"** 
+
+**upande-wambele** mara nyingi hupangiliwa kwa mfulilizo wa mafaili ikiwakilisha kurasa zipi zipo, muundo wake ukoje
+pamoja na javascript kwa ajili ya kushughulikia mwingliano, mantiki, na kuita API. 
+
+Na ndiyo ambao watumiaji wanauona, nyuma ya pazia ni zaidi ya hivyo
+kwani code kwa msingi hufanya baadhi ya mambo kama vile-:
+
+
+hujenga vipengele vinavyo onekana kwenye kurasa za tovuti, kwa kutumia html na css
+
+hushughulikia muingliano na uhuishaji kwa kutumia javascript
+
+kujaza ukurasa na data kwa kuita api za ndani na nje
+
+ 
+
+unapo tengeneza au kuendeleza application ambayo watumiaji 
+wana itazama mbele "frontend", code za hiyo application zita hitaji kuishi mahali 
+
+kuna namna kadhaa wa kadhaa ambazo unaweza kuzitumia mfano  
+
+kuweka kwenye server maalumu tofauti na backend
+
+kuweka kwenye server moja pamoja na backend
+
+kuweka bila au pamoja na backend kwa kutumia furusa zinazo patikana 
+kwenye maeneo kama vile **jukwaa-kama-haduma** (Paas) mfano Heroku, Railway, Render, nk
+
+chaguzi zote hizi zina kuja na changomota kama vile kumtumia mdaa mwingi kufanya configuration pamoja na mpangilio kwa uchache
+utahitajika ufanye mpangilio (setting) kwa ajili ya uthibitisho na mtandao kwenye mpangilio wako wa ndani 
+huenda na server za backend, kuwa na nakala ya upande-wambele dunia zima ili iwe karibu na watumiaji wako, kushughulikia DNS
+ili uwe na URL rahisi kufikia na kusomeka na mambo mengine mengi tu mazuri lakini mdaa ni mali na hapo ndipo zina poingia
+bidhaa ambazo zimejengwa kwa ajili ya kupeleka upande-wambele kama vile **vercel**.
+
+Baada ya kuandika code tunahitaji kuzitekeleza code ili kujenga ukurasa wa html hapa tutatumia Vercel kwa huduma ya computer. 
+Webpack na Babel tayari zimekua installed nakufanyiwa configuration na kufichwa kwa hiyo unaweza kuzingatia ku code.
+
+Nibure kwa ajili ya sites za hobby na ambazo hazipo kibiyashara. 
+Una weza sambaza kutokea kwenye **CLI**, **GitLab**, **Bitbucket**, au kutokea kwenye **Git**, 
+kwenye makala haya tutatokea **git** kwaku tumia account ya **github**
+
+**Github** kwa juu juu ni tovuti na huduma ya mawinguni ambayo ina wa saidia wa endelazaji
+wa hifadhi na kutawala code zao kwenye hazina za git, kufuatilia na kudhibiti mabadiliko kwenye code,
+hakiki code kama mtaalamu, wezesha mchakato wa CI/CD na mtririko wa kazi za DevOps
+hususani ina msaidia mtu mmoja mmoja na timu kutumia git kwa udhibiti wa toleo na ushirikiano.
+
+Ni rahisi kutumia **Github** kiasi kwamba siyo lazima uwe coder kuweza kuitumia, bila github matumizi ya git 
+ya nakua siyo rahisi kihivyo na utahitaji kufahamu command line
