--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -16,17 +16,17 @@ computer zao na huhitaji kuhifadhi hizo application kwenye server flani ili watu
 Application zina sehemu mbili upande-wambele **"frontend"** na upande-wanyuma **"backend"** 
 
 **upande-wambele** mara nyingi hupangiliwa kwa mfulilizo wa mafaili ikiwakilisha kurasa zipi zipo, muundo wake ukoje
-pamoja na javascript kwa ajili ya kushughulikia mwingliano, mantiki, na kuita API. 
+pamoja na javascript kwa ajili ya **kushughulikia mwingliano**, **mantiki**, na **kuita API**. 
 
 Na ndiyo ambao watumiaji wanauona, nyuma ya pazia ni zaidi ya hivyo
 kwani code kwa msingi hufanya baadhi ya mambo kama vile-:
 
 
-hujenga vipengele vinavyo onekana kwenye kurasa za tovuti, kwa kutumia html na css
+**hujenga vipengele vinavyo onekana kwenye kurasa za tovuti, kwa kutumia html na css
 
 hushughulikia muingliano na uhuishaji kwa kutumia javascript
 
-kujaza ukurasa na data kwa kuita api za ndani na nje
+kujaza ukurasa na data kwa kuita api za ndani na nje**
 
  
 
