--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -22,11 +22,11 @@ Na ndiyo ambao watumiaji wanauona, nyuma ya pazia ni zaidi ya hivyo
 kwani code kwa msingi hufanya baadhi ya mambo kama vile-:
 
 
-**hujenga vipengele vinavyo onekana kwenye kurasa za tovuti, kwa kutumia html na css
+**hujenga vipengele vinavyo onekana kwenye kurasa za tovuti, kwa kutumia html na css**
 
-hushughulikia muingliano na uhuishaji kwa kutumia javascript
+**hushughulikia muingliano na uhuishaji kwa kutumia javascript**
 
-kujaza ukurasa na data kwa kuita api za ndani na nje**
+**kujaza ukurasa na data kwa kuita api za ndani na nje**
 
  
 
