--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -35,15 +35,15 @@ wana itazama mbele "frontend", code za hiyo application zita hitaji kuishi mahal
 
 kuna namna kadhaa wa kadhaa ambazo unaweza kuzitumia mfano  
 
-kuweka kwenye server maalumu tofauti na backend
+**kuweka kwenye server maalumu tofauti na backend**
 
-kuweka kwenye server moja pamoja na backend
+**kuweka kwenye server moja pamoja na backend**
 
-kuweka bila au pamoja na backend kwa kutumia furusa zinazo patikana 
-kwenye maeneo kama vile **jukwaa-kama-haduma** (Paas) mfano Heroku, Railway, Render, nk
+**kuweka bila au pamoja na backend kwa kutumia furusa zinazo patikana 
+kwenye maeneo kama vile jukwaa-kama-haduma (Paas) mfano Heroku, Railway, Render, nk**
 
-chaguzi zote hizi zina kuja na changomota kama vile kumtumia mdaa mwingi kufanya configuration pamoja na mpangilio kwa uchache
-utahitajika ufanye mpangilio (setting) kwa ajili ya uthibitisho na mtandao kwenye mpangilio wako wa ndani 
+chaguzi zote hizi zina kuja na changomota kama vile kumtumia mdaa mwingi kufanya **configuration** pamoja na **mpangilio** kwa uchache
+utahitajika ufanye mpangilio **"setting"** kwa ajili ya uthibitisho na mtandao kwenye mpangilio wako wa ndani 
 huenda na server za backend, kuwa na nakala ya upande-wambele dunia zima ili iwe karibu na watumiaji wako, kushughulikia DNS
 ili uwe na URL rahisi kufikia na kusomeka na mambo mengine mengi tu mazuri lakini mdaa ni mali na hapo ndipo zina poingia
 bidhaa ambazo zimejengwa kwa ajili ya kupeleka upande-wambele kama vile **vercel**.
