--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -33,7 +33,7 @@ kwani code kwa msingi hufanya baadhi ya mambo kama vile-:
 unapo tengeneza au kuendeleza application ambayo watumiaji 
 wana itazama mbele "frontend", code za hiyo application zita hitaji kuishi mahali 
 
-kuna namna kadhaa wa kadhaa ambazo unaweza kuzitumia mfano  
+kuna mbinu kadhaa wa kadhaa ambazo unaweza kuzitumia mfano  
 
 **kuweka kwenye server maalumu tofauti na backend**
 
