--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -42,7 +42,7 @@ kuna mbinu kadhaa wa kadhaa ambazo unaweza kuzitumia mfano
 **kuweka bila au pamoja na backend kwa kutumia furusa zinazo patikana 
 kwenye maeneo kama vile jukwaa-kama-haduma (Paas) mfano Heroku, Railway, Render, nk**
 
-chaguzi zote hizi zina kuja na changomota kama vile kumtumia mdaa mwingi kufanya **configuration** pamoja na **mpangilio** kwa uchache
+chaguzi zote hizi zina kuja na changomota kama vile kutumia mdaa mwingi kufanya **configuration** pamoja na **mpangilio** kwa uchache
 utahitajika ufanye mpangilio **"setting"** kwa ajili ya uthibitisho na mtandao kwenye mpangilio wako wa ndani 
 huenda na server za backend, kuwa na nakala ya upande-wambele dunia zima ili iwe karibu na watumiaji wako, kushughulikia DNS
 ili uwe na URL rahisi kufikia na kusomeka na mambo mengine mengi tu mazuri lakini mdaa ni mali na hapo ndipo zina poingia
