--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -62,3 +62,95 @@ hususani ina msaidia mtu mmoja mmoja na timu kutumia git kwa udhibiti wa toleo n
 
 Ni rahisi kutumia **Github** kiasi kwamba siyo lazima uwe coder kuweza kuitumia, bila github matumizi ya git 
 ya nakua siyo rahisi kihivyo na utahitaji kufahamu command line
+
+kuelewa vizuri Github nivyema tukaangalia **udhibiti wa toleo** na **git** 
+
+udhibiti wa toleo husaidia waendelezaji kufuatilia na kudhibiti mabadiliko kwenye project ya software
+kadri project ya software inavyo zidi ku kuwa udhibiti wa matoloe ndivyo unavyozidi kuwa mhimu
+
+
+tunapokua tunafanya kazi kwenye project za software kama una hitaji ku hariri chanzo cha code
+hauta kwenda na ku hariri chanzo asili cha code, badala yake udhibiti wa toleo unakuwezesha kufanya kazi kwa usalaama
+kupitia matawi **"branching"** na kuunganisha **"merging"**  
+
+
+
+kwa kutumia **matawi** muendelezaji hutengeneza nakala ya chanzo cha code ambayo ataitumia kufanya mabadiliko anayo hitaji 
+bila kuathiri project nzima, pale anapokua ameridhika na ufanisi wa code uta **zingunisha** na zile za code asili, mabadilikoyote haya 
+hu rekodiwa kwa hiyo unaweza kurejea ikihitajika
+
+**Git**
+mfumo mahususi wa udhibiti wa toleo ulio sambanzwa ambao chanzo chake cha code kipo wazi ulianzishwa na Linus Torvalds mwaka 2005.
+tafsiri yake ni kwamba chanzo cha code na historia inapatikana kwenye computer ya kila mwendelezaji na kurahisisha utowaji wa matawi na unganishaji
+
+
+usanifu wa code utakua unazingatia kanuni za ECMAScript 6 === ES6
+
+**JavaScript** ni alama ya biyashara ya [Oracle](https://www.oracle.com/id/index.html) ambayo waliirithi kutoka Sun. 
+Kwa hiyo jina lililo rasimi la *javascript* ni **ECMAScript** jina hili linatoka kwenye shirika la kusimami viwango 
+linalojulikana kama **Ecma** ambalo kaziyake nikusimamia viwango vya lugha hii. 
+Tangu kuanzishwa kwa *ECMAScript's* jina la shirika limetoka kwenye kifupi cha ECMA na kua jina kamili la [ecma](https://www.ecma-international.org/) 
+matoleo ya javascript hufafanuliwa kwa vipimo ambayo vinabeba jina la lugha mf toleo la kiwango cha kwanza cha javascript ni ECMAScript 1 
+tafsiri yake ni "ECMAScript Language Specification, Edition 1”. Unaweza kuandika kwa ufupi Es1  
+
+**Es6**(2016) njia iliyo wezeshwa kwenye vivinjari vingi njia hii inakuja na vipengele kedekede kama vile 
+**arrow** **function**, **template string**, **const**, **let**, uwezo waku **Export/import** modules. Nk 
+
+**React** ni maktaba ya javascript ambayo chanzo chake cha code kipo wazi inatumika kutengeneza anavyoona **view** na kungiliana navyo mtumiaji **"user interfaces" (UI)**
+ 
+**mwingiliano** unajengwa na vipengele vidogo vidogo kama vile vitufe, maandishi, na picha react inakuwezesha
+kuchanganya vyote hivi katika haliambayo unaweza kuvitumia tena.
+
+Framework nyingi za kutengeza static website "SSG" nyuma ya pazia zinatumia maktaba ya react mf Nextjs, Gatsby, Docusaurus, Umijs nk
+
+Alafu zikaongeza manjonjo yake kwa hiyo kufahamu kwako kutumia maktaba hii kutakuweka sehemu zuri pale utakapo amuwa kutumia framework, 
+na zaidi ya hapo makapuni na mashirika mengi makubwa yanatumia maktaba hii na kwenye jamii inafanya vizuri watumiaji niwengi 
+hivyo kufanya iwe na machapisho mengi mazuri.
+Kwa kutumia react unaweza ku peleka project kuhifadhiwa kwa mwenyeji yoyote yule anaye hifadhi static application.
+
+
+ni nzuri kwenye kutunza mahusiano kati ya **muonekano**, **hali**, na **mabadiliko ya hali**.
+
+**muonekano** nikile ambacho mtumiaji anaona kwenye kivinjari. **Hali** inarejelea data ambazo zimehifadhiwa
+kwenye muonekano mbali mbali kawaida inategemea mtumiaji ni nani au anafanya nini mfano 
+
+kama ukiwa umejisajili na kuingia kwenye tovuti unaweza kuona profile yako (muonekano) na jina lako (hali)
+data/taarifa za hali zinaweza kubadilika kutokana na mtumiaji na mtumiaji lakini muonekano unakuwa sawa 
+
+ili kuelewa kwa undani jinsi react inavyo endesha muonekano wa hati za html kwenye tovuti nakutoa vipengele ambavyo unaweza kuvitumia mara kwa mara 
+kwenye application yako ni bora tukaelewa "browser DOM"
+
+Lakini kwanza twende sawa, tunapo sema HTML tunamanisha
+
+"Mfumko wa maandishi ya alama za juu ya lugha" tafsiri yake hasa
+
+Ni kuweka alama za juu ishara au code kwenye faili kwa lengo laku onyesha kwenye mtandao wa internet.
+
+Hizo alama za juu zina iambia kivinjari jinsi yakuonyesha ukurasa wa tovuti maandishi, picha na video.
+
+DOM
+
+Kwenye hati za html Html dom, ni kipengele cha kitu ambacho kinawakilisha kipengele cha html kama 
+vile DIV,A,TABLE,P au kipengele chochote kile cha html
+
+huwakilisha ukurasa wa tovuti kama muundo wa mti. Kila kipengele cha html tunacho andika huongenzwa
+kama node kwenye huu mti. Kwa kutumia javascript tunaweza kuzifikia hizi node nakubadilisha muonekana wake nk
+Dom inawezeshe javascript kusasisha ukurasa wa tovuti kwa urahisi 
+
+Bilashaka Mpaka hapa umekwisha pata twaswira zuri ya nyenzo ambazo tunazitumia, tutoke 
+kwenye nadharia hadi kwenye vitendo kwanza tufunge safari 
+hadi github kutengeneza hazina github itabidi uwe na account github 
+kama huna jisajili alafu uingie github, na kufanya ifuatavyo,
+
+
+![img](https://i.ibb.co/m4nY254/git-new-repo.jpg)
+
+
+
+![img](https://i.ibb.co/cQ7p0c5/github-create-new-repo.jpg)
+
+
+![img](https://i.ibb.co/Pt92z6Y/github-create-newrepo.jpg)
+
+
+
