--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -32,7 +32,6 @@ kwani code kwa msingi hufanya baadhi ya mambo kama vile-:
 
 unapo tengeneza au kuendeleza application ambayo watumiaji 
 wana itazama mbele "frontend", code za hiyo application zita hitaji kuishi mahali 
-
 kuna mbinu kadhaa wa kadhaa ambazo unaweza kuzitumia mfano  
 
 **kuweka kwenye server maalumu tofauti na backend**
@@ -65,7 +64,7 @@ ya nakua siyo rahisi kihivyo na utahitaji kufahamu command line
 
 kuelewa vizuri Github nivyema tukaangalia **udhibiti wa toleo** na **git** 
 
-udhibiti wa toleo husaidia waendelezaji kufuatilia na kudhibiti mabadiliko kwenye project ya software
+**udhibiti wa toleo** husaidia waendelezaji kufuatilia na kudhibiti mabadiliko kwenye project ya software
 kadri project ya software inavyo zidi ku kuwa udhibiti wa matoloe ndivyo unavyozidi kuwa mhimu
 
 
