--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -113,32 +113,32 @@ ni nzuri kwenye kutunza mahusiano kati ya **muonekano**, **hali**, na **mabadili
 **muonekano** nikile ambacho mtumiaji anaona kwenye kivinjari. **Hali** inarejelea data ambazo zimehifadhiwa
 kwenye muonekano mbali mbali kawaida inategemea mtumiaji ni nani au anafanya nini mfano 
 
-kama ukiwa umejisajili na kuingia kwenye tovuti unaweza kuona profile yako (muonekano) na jina lako (hali)
+kama ukiwa umejisajili na kuingia kwenye tovuti unaweza kuona profile yako (**muonekano**) na jina lako (**hali**)
 data/taarifa za hali zinaweza kubadilika kutokana na mtumiaji na mtumiaji lakini muonekano unakuwa sawa 
 
 ili kuelewa kwa undani jinsi react inavyo endesha muonekano wa hati za html kwenye tovuti nakutoa vipengele ambavyo unaweza kuvitumia mara kwa mara 
-kwenye application yako ni bora tukaelewa "browser DOM"
+kwenye application yako ni bora tukaelewa **"browser DOM"**
 
-Lakini kwanza twende sawa, tunapo sema HTML tunamanisha
+Lakini kwanza twende sawa, tunapo sema **HTML** tunamanisha
 
-"Mfumko wa maandishi ya alama za juu ya lugha" tafsiri yake hasa
+**"Mfumko wa maandishi ya alama za juu ya lugha"** tafsiri yake hasa
 
 Ni kuweka alama za juu ishara au code kwenye faili kwa lengo laku onyesha kwenye mtandao wa internet.
 
 Hizo alama za juu zina iambia kivinjari jinsi yakuonyesha ukurasa wa tovuti maandishi, picha na video.
 
-DOM
+**DOM**
 
-Kwenye hati za html Html dom, ni kipengele cha kitu ambacho kinawakilisha kipengele cha html kama 
-vile DIV,A,TABLE,P au kipengele chochote kile cha html
+Kwenye hati za **html** Html dom, ni kipengele cha kitu ambacho kinawakilisha kipengele cha html kama 
+vile DIV,A,TABLE,P au kipengele chochote kile cha **html**
 
 huwakilisha ukurasa wa tovuti kama muundo wa mti. Kila kipengele cha html tunacho andika huongenzwa
 kama node kwenye huu mti. Kwa kutumia javascript tunaweza kuzifikia hizi node nakubadilisha muonekana wake nk
-Dom inawezeshe javascript kusasisha ukurasa wa tovuti kwa urahisi 
+**Dom** inawezeshe javascript kusasisha ukurasa wa tovuti kwa urahisi 
 
 Bilashaka Mpaka hapa umekwisha pata twaswira zuri ya nyenzo ambazo tunazitumia, tutoke 
-kwenye nadharia hadi kwenye vitendo kwanza tufunge safari 
-hadi github kutengeneza hazina github itabidi uwe na account github 
+kwenye nadharia hadi kwenye vitendo kwa tufunge safari 
+hadi **github** kutengeneza hazina github itabidi uwe na **account** github 
 kama huna jisajili alafu uingie github, na kufanya ifuatavyo,
 
 
