--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -181,9 +181,15 @@ README.MD
 package.json
 ```
 
-Umepata taswira! Tusonge mbele tengeneza faili jingine na kuliita `package.json`  faili hili maranyingi lina kaa kwenye mzizi wa application yako, ili kulitengeneza hili faili github utafanya hivi
+Umepata taswira! Tusonge mbele tengeneza faili na kuliita `package.json`  faili hili maranyingi lina kaa kwenye mzizi wa application yako, ili kulitengeneza hili faili github utafanya hivi
+
+
 ![github tengeneza faili ](https://i.ibb.co/LvMvWRT/github-create-file.jpg)
+
+
 weka.
+
+
 ```javascript 
 {
   "name": "dodosa",
@@ -234,7 +240,7 @@ weka.
 
 faili hili nila **json** na tunaonyesha **vifurushi** ambavyo **application** yetu inavihitaji ili iweze kufanya kazi kama tunavyo kusudia. 
 
-Nimeanza  na kuweka **jina** la application, jina la **muandishi**, **toleo** la application, na tumesema ni **private** ili isije kwa bahatimbaya lika chapishwa kwenye **hathina** za **npm**, **dependencies** ni vifurushi ambayo application yetu inategeme iliiweze kufanya kazi kama tunavyo kusudia,
+Nimeanza  na kuweka **jina** la application, jina la **muandishi**, **toleo** la application, na tumesema ni **private** ili isije kwa bahatimbaya lika chapishwa kwenye **hazina** za **npm**, **dependencies** ni vifurushi ambayo application yetu inategeme iliiweze kufanya kazi kama tunavyo kusudia,
 tunaonyesha **script** za **node** ambazo tunaweza  kuziendesha, **eslintConfig** hii inatuwezesha kuona **makosa** ya kwenye **code** tukiwa tunaandika kwenye **console** kabla ya kuanzisha **code** kwa kumulika kosa lakisheria pale litakapo jitokeza, **browserslist** hapa naonyesha **vivinjari** ambavyo na vilenga. 
 
  Kumbuka kusave Hilo faili. 
