--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -276,9 +276,13 @@ ili kutengeneza **directory** kwenye github  utaandika
 
 ``` 
 
+
+jina la **id** kwenye `div` unaweza kuita vyovyote vile, lakini kwa lengo lakubaki kwenye viwango vya jamii nita tumi jina 
+la `root` code zikisha tekelenzwa zita pachikwa hapo kwenye hiyo `div` na kutengeneza ukurasa 
+
 Katika hali yakawaida **react** inategemea kuona faili la **index.js** kama unataka kulipa jina jingine itabidi uifahamishe **package.json** 
 
-Faili hili ndilo lina tumika kuonyesha **vipengele** kwenye **DOM "module ya kitu cha hati"**  
+Faili hili ndilo lina tumika kuonyesha **vipengele** kwenye **DOM**  
 
 Tengeneza hilo faili kwenye directory  ya `src` jina liwe `index.js` 
 
