--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -303,6 +303,12 @@ kwanza na anzaa na sheria za Es6 kwa **kuagiza maktaba** ya **React** kutokea re
 
 Baada ya kuagiza hizo **maktaba** ni wakati waku **zitumia**, ili **kutoa kipengele** cha **react** kwenye **DOM** na pitisha  **ReactDOM.render** na sasisha **dom** iendane na ile ya **react**. 
 
-Wala sisahau kutupia aina flani ya msaidizi **React.StrictMode** ambaye atatusaidia kuandika vipengele  vya react vyenye **ubora** kwakua inatoa **onyo** kwenye **console** pale kunapotokea **ukiukaji** wa **sheria** wakati tunatengeneza **vipengele**. Tukiwa bado tunazungumzia **vipengele** naonyesha **kipengele** cha **hati** ya **hml** kwa kutumia **jsx**, kipengele hiki ndiyo ambacho nataka **react** ikiweke kwenye **DOM**  ili kuweka kwenye **DOM** tunatumia `document.getElementById('root')` msisitizo ukiwa kwenye **“root”** DOM node 
+Wala sisahau kutupia aina flani ya msaidizi **React.StrictMode** ambaye atatusaidia kuandika vipengele  vya react vyenye **ubora** kwakua inatoa **onyo** kwenye **console** pale kunapotokea **ukiukaji** wa **sheria** wakati tunatengeneza **vipengele**. Tukiwa bado tunazungumzia **vipengele** naonyesha **kipengele** cha **hati** ya **hml** kwa kutumia **jsx** kuleta athari kwenye alama za juu za html na tumia extension ya `javascript` inayo julikana kama `JSX`, 
+hii itatuwezesha kuandika alama za juu za html kwenye javascript, 
+wala usihofu kuhusu kubadilishwa kutoka jsx kwenda  **javascript** kwani nyenzo tutakazo tumia kuendesha code vascel, sandbox
+na zile za `Create React App` au `Next.js` nk,  `JSX transform` , `Babel` na `TypeScript` zimekwisha wezeshwa nakufanyiwa configuration
+ 
+kuweka kwenye **DOM** tunatumia `document.getElementById('root')` msisitizo ukiwa kwenye **“root”** DOM node 
+
 
 >> Tafsiri yake ni kwamba kwenye kitu cha div ambacho kipo kwenye hati ya html ndiyo tunataka tuone hiki kipengele
