--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -312,3 +312,23 @@ kuweka kwenye **DOM** tunatumia `document.getElementById('root')` msisitizo ukiw
 
 
 >> Tafsiri yake ni kwamba kwenye kitu cha div ambacho kipo kwenye hati ya html ndiyo tunataka tuone hiki kipengele
+
+
+**Vercel kama computer ya kuendeshea code**
+
+Ili kuweza kukiona hicho kipengele **copy** link ya hazina yako alafu uchanja mbuga na kivinjari chako hadi **Vercel** hapa ndipo tutakapo endeshea code zetu inaingiliana vizuri sana na bomba la kuendeleza usambazaji la **Github**  
+
+Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho andikwa **new repo** alafu nita **bofya impor git repository** naku **paste** ile **link** ya **hathina** yangu kwa vile ni mara ya kwanza intanilazimu ni **install** app ya **Vercel**, github. Ili kuipa uwezo **vercel** kusoma na kuandika kwenye **hathina** zangu za **Github** angalia hapa 
+![Install_vercel github](https://i.ibb.co/ws7yBYc/Install-vercel1.jpg)
+![Install_vercel github ](https://i.ibb.co/TqRFx6H/Install-vercel2.jpg)
+![deploy_vercel github](https://i.ibb.co/jf9fQQ5/Install-vercel3.jpg)
+![deploy_vercel github](https://i.ibb.co/zVZfZng/Install-vercel4.jpg) 
+
+Bilashaka umefanikiwa kuona HTML DOM kwa vitendo **kipengele** cha **react** kikitolewa kwenye **kivinjari** chako 
+![React component deployed vercel](https://i.ibb.co/ThY8VZ6/Install-vercel5.jpg)
+
+
+Vifaa kwenye react
+
+
+
