--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -322,13 +322,22 @@ Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho an
 ![Install_vercel github](https://i.ibb.co/ws7yBYc/Install-vercel1.jpg)
 ![Install_vercel github ](https://i.ibb.co/TqRFx6H/Install-vercel2.jpg)
 ![deploy_vercel github](https://i.ibb.co/jf9fQQ5/Install-vercel3.jpg)
-![deploy_vercel github](https://i.ibb.co/zVZfZng/Install-vercel4.jpg) 
+![deploy_vercel github](https://i.ibb.co/zVZfZng/Install-vercel4.jpg)
 
-Bilashaka umefanikiwa kuona HTML DOM kwa vitendo **kipengele** cha **react** kikitolewa kwenye **kivinjari** chako 
 ![React component deployed vercel](https://i.ibb.co/ThY8VZ6/Install-vercel5.jpg)
 
+Bilashaka umefanikiwa kuona **kipengele** cha **react** kikipachikwa kwenye HTML DOM na kikitolewa kwenye **kivinjari** chako
+umeona mnyororo wa bomba la upelekeji na uendlezaji application upande-wambele.
 
-Vifaa kwenye react
+Naam, baada ya dom kutubainikia na JSX kujitokeza ingependeza kama tunge viangalia vifaa vya react 
+kwa ndani kidogo ilikuweza kuielewa na kuitumia React kwa ufasaha
+
+
+
+
+
+
+
 
 
 
