--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -95,9 +95,9 @@ tafsiri yake ni "ECMAScript Language Specification, Edition 1”. Unaweza kuandi
 **Es6**(2016) njia iliyo wezeshwa kwenye vivinjari vingi njia hii inakuja na vipengele kedekede kama vile 
 **arrow** **function**, **template string**, **const**, **let**, uwezo waku **Export/import** modules. Nk 
 
-**React** ni maktaba ya javascript ambayo chanzo chake cha code kipo wazi inatumika kutengeneza anavyoona **view** na kungiliana navyo mtumiaji **"user interfaces" (UI)**
+**React** ni maktaba ya javascript ambayo chanzo chake cha code kipo wazi inatumika kutengeneza anavyoona **"view"** na anacho ingiliana nacho mtumiaji **"user interfaces" (UI)**
  
-**mwingiliano** unajengwa na vipengele vidogo vidogo kama vile vitufe, maandishi, na picha react inakuwezesha
+**mwingiliano "UI"** unajengwa na vipengele vidogo vidogo kama vile vitufe, maandishi, na picha react inakuwezesha
 kuchanganya vyote hivi katika haliambayo unaweza kuvitumia tena.
 
 Framework nyingi za kutengeza static website "SSG" nyuma ya pazia zinatumia maktaba ya react mf Nextjs, Gatsby, Docusaurus, Umijs nk
@@ -329,8 +329,16 @@ Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho an
 Bilashaka umefanikiwa kuona **kipengele** cha **react** kikipachikwa kwenye HTML DOM na kikitolewa kwenye **kivinjari** chako
 umeona mnyororo wa bomba la upelekeji na uendlezaji application upande-wambele.
 
-Naam, baada ya dom kutubainikia na JSX kujitokeza ingependeza kama tunge viangalia vifaa vya react 
-kwa ndani kidogo ilikuweza kuielewa na kuitumia React kwa ufasaha
+Naam, baada ya dom kutubainikia na JSX kujitokeza ingependeza kama tunge viangalia vipengele vya react 
+kwa ndani kidogo ilikuweza kuielewa na kuitumia React kwa ufasaha kwenye kuendeleza au kujenga
+**vipengela anavyo ingiliana navyo mtumiaji** kwa maana ya **"user interfaces" (UI)** kwenye muktadha huu.
+
+Kumbuka tu kwamba **kipengele** cha reat ni **kazi** ya javascript ambayo unaweza kuiwekea madegeshee kwa kutumia alama za juu 
+kitaalam tuna sema **Functional Component** ili kuweza kuzielewa...twende kwa vitendo 
+
+
+Anza naku tengeneza faili `.js` kwenye directory ya `Component` alafu utaweka 
+
 
 
 
