--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -337,7 +337,10 @@ Kumbuka tu kwamba **kipengele** cha reat ni **kazi** ya javascript ambayo unawez
 kitaalam tuna sema **Functional Component** ili kuweza kuzielewa...twende kwa vitendo 
 
 
-Anza naku tengeneza faili `.js` kwenye directory ya `Component` alafu utaweka 
+Anza naku tengeneza faili `List.js` kwenye directory ya `Component` jina unaweza kuita 
+chochote ili mradi liwe namantiki kwa wengine watakao soma code zako. weka
+
+
 
 
 
